examples/test/testpolicy11003.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11003
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key17: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value43
          key16: value22
          key19: value49
      podSelector:
        matchLabels:
          key23: value35
          key41: value27
          key16: value39
